--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>你好</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>代码的搬运工</title>
+</head>
+<body>
+    <h2>黄科钦的学习笔记</h2>
+    <h2>不创建代码，只是代码的搬运工</h2>
+</body>
+</html>
